# ls-pretty

./: Cargo.toml  README.md  check-go-lsp.sh  demo.rs  output.txt  test.go  test_file.txt
src/: main.rs  main_backup.rs  tabs.rs
