[package]
name = "ls-pretty"
version = "0.1.0"
edition = "2024"
default-run = "ls-pretty"

[features]
default = []
tabs-demo = []


[dependencies]
ratatui = "0.24"
crossterm = "0.27"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.1"
dirs = "5.0"
syntect = "5.1"
portable-pty = "0.8"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tower-lsp = "0.20"
lsp-types = "0.95"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
fuzzy-matcher = "0.3"
